doc: thesis polishing p1

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -101,7 +101,7 @@ Zweitgutachter:in:& Dr. Markus Brenneis\\ % Namen eintragen
 \maketitle
 
 \chapter*{Hinweise zu verwendeten Hilfsmitteln}
-Für Teile des Entstehungsprozesses dieser Arbeit wurden Large-Language-Models (Sonnet 4.5, Opus 4.5, GPT 5.2) verwendet. Dies geschah im Rahmen von Programmierunterstützung und sprachlichen Glättung, sowie Strukturierung des schriftlichen Teils.
+Für Teile des Entstehungsprozesses dieser Arbeit wurden Large-Language-Models (Sonnet 4.5, Opus 4.5, GPT 5.2) verwendet. Dies geschah im Rahmen von Programmierunterstützung und sprachlicher Glättung, sowie Strukturierung des schriftlichen Teils.
 
 \chapter*{Selbstständigkeitserklärung}
 Hiermit erkläre ich, die vorliegende Bachelorarbeit selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet zu haben. Alle Stellen, die aus Quellen entnommen wurden, sind als solche kenntlich gemacht worden. Diese Arbeit hat in gleicher oder ähnlicher Form noch keiner anderen Prüfungsbehörde vorgelegen.
@@ -114,15 +114,15 @@ Hiermit erkläre ich, die vorliegende Bachelorarbeit selbstständig verfasst und
 \chapter*{Zusammenfassung}
 Bounding Volume Hierarchies (BVHs) gehören zu den wichtigsten Beschleunigungsdatenstrukturen zur effizienten Berechnung von Ray-Szenen-Schnittpunkten in der Bildprojektion. Während Wide BVHs (Verzweigungsgrad $k > 2$) bereits im Zusammenhang mit Optimierung durch GPU-Berechnung untersucht werden, ist es weniger klar, ob sie auch einen praktischen Vorteil durch ihre Struktur bieten, die über die Parallelisierbarkeit hinausgeht. Falls auch eine Verbesserung bei serieller Berechnung auf der CPU gesehen werden kann, ergibt das neue Einblicke in die Optimierungsmöglichkeiten durch Wide BVH.
 
-Diese Arbeit untersucht Top-Down konstruierte BVH in statischen dreidimensionalen Szenen für Verzweigungsgrade $k \in \{2, 4 ,8 ,16\}$. Dies geschieht unter Berücksichtigung von drei Splitting-Verfahren (Median, Surface Area Heuristic und Binned Surface Area Heuristic), sowie zwei Methoden zur Erzeugung von Wide BVHs (k-way splitting und binary BVH collapse). Dabei steht die Traversal-Time als primäres und die Construction-Time als sekundäres Qualitätsmerkmal im Fokus. Zudem wird durch eine Kombination der beiden Qualitätsmetriken ein Szenario mit dynamischer Szene modelliert.
+Diese Arbeit untersucht Top-Down konstruierte BVH in statischen dreidimensionalen Szenen für Verzweigungsgrade $k \in \{2, 4 ,8 ,16\}$. Dies geschieht unter Berücksichtigung von drei Splitting-Verfahren (Median, Surface Area Heuristic und Binned Surface Area Heuristic), sowie zwei Methoden zur Erzeugung von Wide BVHs (k-way splitting und binary BVH collapse). Dabei steht die Traversal-Time als primäres und die Construction-Time als sekundäres Qualitätsmerkmal im Fokus. Zudem wird durch eine Kombination der beiden Qualitätsmetriken das Szenario einer dynamischer Szene modelliert.
 
-Für statische Szenen zeigt $k = 4$ gegenüber der binären Referenz keinen einheitlichen Trend for alle Kombinationen an Parametern. Abhängig von Splitting-Verfahren und Wide BVH Erzeugungsmethode liegen die dazugehörigen Speedups zwischen $0,932$ und $1,234$. Insbesondere der Median-Split in Kombination mit collapsing erzeugt schlechtere Traversal-times gegenüber $k = 2$, während SAH und BSAH häufiger Verbesserungen aufzeigen. Für größere Verzweigungsgrade verschlechtern sich die Traversal-Times über alle Konfigurationen mit Speedups zwischen $0,529$ und $0,866$ für $k = 8$, sowie nochmal dramatisch schlechter für $k = 16$ mit Speedups zwischen $0,077$ und $0,666$. Dabei ist die Streuung dieser Werte stark abhängig von der gewählten Wide BVH Erzeugungsmethode.
+Für statische Szenen zeigt $k = 4$ gegenüber der binären Referenz keinen einheitlichen Trend for alle Kombinationen an Parametern. Abhängig von Splitting-Verfahren und Wide BVH Erzeugungsmethode liegen die dazugehörigen Speedups zwischen $0,932$ und $1,234$. Insbesondere der Median-Split in Kombination mit collapsing erzeugt schlechtere Traversal-times gegenüber $k = 2$, während SAH und BSAH häufiger Verbesserungen aufzeigen. Für größere Verzweigungsgrade verschlechtern sich die Traversal-Times über alle Konfigurationen mit Speedups zwischen $0,529$ und $0,866$ für $k = 8$, sowie nochmal deutlich schlechtere für $k = 16$ mit Speedups zwischen $0,077$ und $0,666$. Dabei ist die Streuung dieser Werte stark abhängig von der gewählten Wide BVH Erzeugungsmethode.
 
 Im direkten Vergleich zwischen k-way splitting und collapsing zeigt sich, dass die Verfahren keine gleichwertigen Wide BVH erzeugen. Während der Unterschied für $k = 4$ noch stark abhängig vom gewählten Splitting-Algorithmus, mit Speedups nahe $1$, ist, ist k-way splitting für $k \ge 8$ in allen untersuchten Szenen für alle Splitting-Algorithmen schneller. Für $k = 16$ liegt der Vorteil teils sogar bei einer ungefähr 2,5-fachen bis 6-fachen besseren Geschwindigkeit gegenüber der Nutzung von collapsing.     
 
-Für das dynamische Modell ergibt sich ein differenziertes Bild. Während $k \ge 8$ für alle Fälle schlechtere Ergebnisse als die binäre Referenz liefert, kann k-way splitting in ausgewählter Konfiguration, BSAH in großen Szenen, durch immer kleinere Construction-Times trotz schlechterer Traversal-Times gegenüber $k =  2$ überwiegen.
+Für das dynamische Modell ergibt sich ein differenziertes Bild. Während $k \ge 8$ für alle Fälle schlechtere Ergebnisse als die binäre Referenz liefern, kann k-way splitting in ausgewählter Konfiguration, genaugenommen BSAH in großen Szenen, durch immer kleinere Construction-Times trotz schlechterer Traversal-Times gegenüber $k =  2$ überwiegen.
 
-Zusammenfassend lässt sich sagen, dass Wide BVH im Kontext serieller Berechnung auf der CPU nur unter spezifischen Parametern einen praktischen Nutzen liefern können. Je nach Splitting-Algorithmus und erzeugungsmethode kann $k = 4$ einen kleinen aber signifikanten Vorteil liefern. Dagegen sind allgemein $k \ge 8$ nicht zu empfehlen und sollten vor allem bei Erzeugung durch collapsing vermieden werden. Die Aussagekraft dieser Ergebnisse ist durch die kleine Stichprobe an relativ kleinen Szenen, sowie die Beschränkung auf die Berechnung von Primärstrahlen begrenzt. Dadurch bietet sich weitere Forschung unter Berücksichtigung einer breiteren Szenen- und Ray-Verteilung an.
+Zusammenfassend lässt sich sagen, dass Wide BVH im Kontext serieller Berechnung auf der CPU nur unter spezifischen Parametern einen praktischen Nutzen liefern können. Je nach Splitting-Algorithmus und Erzeugungsmethode kann $k = 4$ einen kleinen aber signifikanten Vorteil liefern. Dagegen sind allgemein $k \ge 8$ nicht zu empfehlen und sollten vor allem bei Erzeugung durch collapsing nicht in Betracht gezogen werden. Die Aussagekraft dieser Ergebnisse ist durch die kleine Stichprobe an relativ kleinen Szenen, sowie die Beschränkung auf die Berechnung von Primärstrahlen begrenzt. Dadurch bietet sich weitere Forschung unter Berücksichtigung einer breiteren Szenen- und Ray-Verteilung an.
 
 \tableofcontents
 
@@ -132,11 +132,11 @@ Zusammenfassend lässt sich sagen, dass Wide BVH im Kontext serieller Berechnung
 
 \section{Motivation}
 
-Effiziente Kollisionserkennung hat grundlegenden Nutzen in diversen Feldern, über physikbasierte Simulation und Robotik, bis hin zu Darstellungen in Animation und Videospielen~\cite{ericson2004real}. Im Fall von Animation und Bildgebung im Allgemeinen handelt es sich vor allem um Kollisionen einfacher geometrischer Formen, häufig Geraden oder Strahlen, Dreiecke und Quader. Unter Zuhilfenahme dieser einfachen Werkzeuge lassen sich komplexe dreidimensionale Szenen mit einfachen Mitteln berechnen und darstellen. Für jeden Bildpunkt werden Strahlen, genannt Rays, auf die digitale Szene geworfen. Diese besteht in gängiger Praxis aus einer Ansammlung von Dreiecken, genannt Polygone oder anderen fundamentalen Formen, die allgemein als Primitives bezeichnet werden. Um herauszufinden, ob und wo es eine Kollision zwischen einem Ray und einem bestimmten Polygon gibt, kann man beispielsweise den weitverbreiteten Algorithmus von Möller und Trumbore~\cite{Möller01011997} verwenden. Wenn es einen Treffer gibt, lässt sich aufbauend auf Position und Abstand des Schnittpunktes der korrekte Farbwert für den Pixel berechnen. Diese Rechnung müsste man naiv gesehen für jede Kombination aus Rays und Primitives wiederholen, um ein vollständiges Bild zu generieren. 
+Effiziente Kollisionserkennung hat grundlegenden Nutzen in diversen Feldern, über physikbasierte Simulation und Robotik, bis hin zu Darstellungen in Animation und Videospielen~\cite{ericson2004real}. Im Fall von Animation und Bildgebung im Allgemeinen handelt es sich vor allem um Kollisionen einfacher geometrischer Formen, häufig Geraden oder Strahlen, Dreiecke und Quader. Unter Zuhilfenahme dieser einfachen Werkzeuge lassen sich komplexe dreidimensionale Szenen mit einfachen Mitteln berechnen und darstellen. Für jeden Bildpunkt werden Strahlen, genannt \emph{Rays}, auf die digitale Szene geworfen. Diese besteht in gängiger Praxis aus einer Ansammlung von Dreiecken, genannt \emph{Polygone} oder anderen fundamentalen Formen, die allgemein als \emph{Primitives} bezeichnet werden. Um herauszufinden, ob und wo es eine Kollision zwischen einem Ray und einem bestimmten Polygon gibt, kann man beispielsweise den weitverbreiteten Algorithmus von Möller und Trumbore~\cite{Möller01011997} verwenden. Wenn es einen Treffer gibt, lässt sich aufbauend auf Position und Abstand des Schnittpunktes der korrekte Farbwert für den Pixel berechnen. Diese Rechnung müsste man naiv gesehen für jede Kombination aus Rays und Primitives wiederholen, um ein vollständiges Bild zu generieren. 
 
 \section{Thema und fachliche Einordnung}
 
-Um den Vorgang zu beschleunigen, kommen zwei Datenstrukturen ins Spiel: Die Axis Aligned Bounding Box (AABB) und darauf aufbauend die Bounding Volume Hierarchy (BVH)~\cite{VahlGordonClevenger+2021}. Eine AABB definiert achsenorientierte obere und untere Schranken für Teilmengen von Primitives in Form eines Quaders, der diese im Raum einschließt. Durch die Einführung von AABB lassen sich die nötigen Ray-Object-Intersection-Tests verringern, indem man für jeden Ray erst die Kollision mit den AABBs überprüft. Wenn es bereits keine Kollision mit der umschließenden Bounding Box gibt, kann von vornherein ausgeschlossen werden, dass es eine Kollision mit den innenliegenden Primitives gibt. 
+Um den Vorgang zu beschleunigen, kommen zwei Datenstrukturen ins Spiel: Die \emph{Axis Aligned Bounding Box (AABB)} und darauf aufbauend die \emph{Bounding Volume Hierarchy (BVH)}~\cite{VahlGordonClevenger+2021}. Eine AABB definiert achsenorientierte obere und untere Schranken für Teilmengen von Primitives in Form eines Quaders, der diese eng im Raum einschließt. Durch die Einführung von AABB lassen sich die nötigen Ray-Primitive-Kollisionstests, auch \emph{Intersection-Tests} genannt, verringern, indem man für jeden Ray erst die Kollision mit den umschließenden AABBs überprüft. Wenn es bereits keine Kollision mit der umschließenden Bounding Box gibt, kann von vornherein ausgeschlossen werden, dass es eine Kollision mit den innenliegenden Primitives gibt. 
 Um den Vorteil dieses Verfahrens effektiv zu nutzen, kann man nun rekursiv die eingeschlossenen Teilmengen wieder aufteilen und mit AABBs umschließen. Dadurch lassen sich die Bounding Boxes in eine hierarchische Reihenfolge bringen, die eine Baumstruktur aufweist. Diese Struktur ist eine Bounding Volume Hierarchy. Durch eine BVH wird die Laufzeit auf ein Niveau gesenkt, das typischerweise bei geeigneter Ray-Verteilung logarithmisch von der Anzahl an Primitives in der Szene abhängt, was die Zeit für ein fertig gerendertes Bild drastisch sinken lassen kann. Diesen Vorteil erkauft man sich durch das Einführen des zusätzlichen Konstruktionsschrittes, der in Abwägung dazu steht. 
 Die sinnvolle Konstruktion einer BVH ist ein Kernpunkt dieser Arbeit. 
 
@@ -149,9 +149,9 @@ Die sinnvolle Konstruktion einer BVH ist ein Kernpunkt dieser Arbeit.
 
 \section{Zielsetzung}
 
-Es existieren Konstruktionsverfahren verschiedener Komplexitätsklassen, deren Endprodukt sich auf die Traversal Time (Renderzeit) auswirkt. Von der Construction Time (Konstruktionszeit) lässt sich die Nutzbarkeit einer BVH in dynamischen Szenen, also Szenen mit bewegten Objekten, ableiten. Die Traversal Time ist das Hauptqualitätsmerkmal für eine BVH, da sich durch niedrigere Zeiten höhere Auflösungen und Bildwiederholraten, sowohl in statischen wie auch dynamischen Szenen, realisieren lassen.
-Ein genutzter Vorteil der Baumstruktur ist, dass sich sowohl Construction (Konstruktion) als auch Traversal (Durchsuchung) auf GPUs parallelisieren lassen. Dabei spielt auch die Konstruktion mit höheren Verzweigungsgraden eine Rolle, wobei man auch dies durch unterschiedliche Konstruktionsverfahren erreichen kann, wie dem \emph{k-way splitting} oder durch \emph{collapse} (Kollabierung) der Hierarchie. Diese Art von BVH wird Wide BVH (Weite BVH) oder auch BVHk genannt. 
-Ziel der Arbeit ist die Analyse verschiedener Konstruktionsverfahren von Wide BVHs mit Hinblick auf Einsparung in Traversal- aber auch Construction-Zeit in statischen Szenen. Diese Art von BVH ist bereits in der parallelisierten Berechnung mit GPUs weiter verbreitet, hier wird allerdings eine serielle Berechnung auf der CPU untersucht und damit die algorithmischen Vor- und Nachteile von Wide BVH. Dabei sollen die Ergebnisse abhängig von dem verwendeten Konstruktionsalgorithmus, dem Verzweigungsgrad der Hierarchie und der Primitive-Anzahl der Szene beleuchtet werden. 
+Es existieren Konstruktionsverfahren verschiedener Komplexitätsklassen, deren Endprodukt sich auf die \emph{Traversal-Time (Renderzeit)} auswirkt. Von der \emph{Construction-Time (Konstruktionszeit)} lässt sich die Nutzbarkeit einer BVH in dynamischen Szenen, also Szenen mit bewegten Objekten, ableiten. Die Traversal-Time ist das Hauptqualitätsmerkmal für eine BVH, da sich durch niedrigere Zeiten höhere Auflösungen und Bildwiederholraten, sowohl in statischen wie auch dynamischen Szenen, realisieren lassen.
+Ein genutzter Vorteil der Baumstruktur ist, dass sich sowohl Construction (Konstruktion) als auch Traversal (Durchsuchung) auf GPUs parallelisieren lassen. Dabei spielt auch die Konstruktion mit höheren Verzweigungsgraden eine Rolle, wobei man auch dies durch unterschiedliche Erzeugungsverfahren erreichen kann, wie dem \emph{k-way splitting} oder durch \emph{collapse} (Kollabierung) der Hierarchie. Diese Art von BVH wird \emph{Wide BVH (Weite BVH)} oder auch \emph{BVHk} genannt. 
+Ziel der Arbeit ist die Analyse verschiedener Konstruktionen von Wide BVHs mit Hinblick auf Einsparung in Traversal- aber auch Construction-Time in statischen Szenen. Diese Art von BVH ist bereits in der parallelisierten Berechnung mit GPUs weiter verbreitet, im Rahmen dieser Arbeit wird allerdings eine serielle Berechnung auf der CPU untersucht und damit die algorithmischen Vor- und Nachteile von Wide BVH. Dabei sollen die Ergebnisse abhängig von dem verwendeten Verfahren der Konstruktion, dem Verzweigungsgrad der Hierarchie und der Primitive-Anzahl der Szene beleuchtet werden. 
 Dabei haben sich drei Problemfragen ergeben, die den Umfang dieser Arbeit definieren:
 \begin{itemize} 
 \item
@@ -169,17 +169,17 @@ In der zugrundeliegenden Arbeit werden lediglich statische dreidimensionale Szen
 
 Zudem werden ausschließlich Top-Down-Konstruktionsmethoden verwendet, da diese in Forschung und Lehre weit verbreitet und einfacher zu implementieren sind~\cite{https://doi.org/10.1111/cgf.142662}.
 
-Die verglichenen Datenstrukturen sind lediglich BVH bzw Wide BVH, es werden keine anderen Beschleunigungsstrukturen, wie k-d-Trees beachtet. Wide BVHs werden im Vergleich zu ihrer binären Referenzimplementation untersucht. 
+Die verglichenen Datenstrukturen sind lediglich BVH bzw. Wide BVH, es werden keine anderen Beschleunigungsstrukturen, wie k-d-Trees beachtet. Wide BVHs werden im Vergleich zu ihrer binären Referenzimplementation untersucht. 
 
-Es werden ganz explizit verschiedene Verfahren zur Konstruktion von Wide BVHs untersucht und verglichen. Das sogenannte k-way splitting, also das Partitionieren der Menge in k Teilmengen in einem Iterationsschritt entlang einer Achse, ist das erste untersuchte Verfahren. Auf der anderen Seite steht das collapse-Verfahren bei dem Nodes einer Binären Hierarchie nach der Konstruktion mit ihren Kindern verschmolzen werden um den Verzweigungsgrad zu verdoppeln.
+Es werden ganz explizit verschiedene Verfahren zur Konstruktion von Wide BVHs untersucht und verglichen. Das sogenannte k-way splitting, also das Partitionieren der Menge in k Teilmengen in einem Iterationsschritt entlang einer Achse, ist das erste untersuchte Verfahren. Auf der anderen Seite steht das collapsing bei dem Nodes einer binären Hierarchie nach der Konstruktion mit ihren Kindern verschmolzen werden, um den Verzweigungsgrad zu verdoppeln.
 
 Es werden lediglich Median-Split und SAH-Split, sowie die Optimierungsvariante binned SAH-Split untersucht, keine komplexeren Varianten wie Spatial-Splits. Zudem ist die Anzahl der Bins auf 16 festgelegt. Der Fokus soll nicht auf den verwendet Algorithmen, sondern auf den Auswirkungen der Verfahren bezüglich dem Verzweigungsgrad liegen.
 
 Die gemessenen Metriken beziehen sich auf CPU-Zeit, also lineare Berechnungen. Spezielle Raytracing-Hardware oder parallelisierte Messergebnisse werden nicht untersucht, da der Fokus auf Gewinn durch strukturelle Eigenschaften der Hierarchien liegen soll.
 
-Die bei der Traversal-Time verwendeten Rays sind lediglich \emph{Primärstrahlen}, also direkte Strahlen zwischen virtueller Kamera und Objekt. Dadurch fallen Verfahren wie Reflektion, Refraktion o.Ä. aus der Bewertung, was die Vergleichbarkeit vereinfacht und die Komplexität verringert.   
+Die bei der Traversal-Time verwendeten Rays sind lediglich \emph{Primärstrahlen}, also direkte Strahlen zwischen virtueller Kamera und Szene. Dadurch fallen Verfahren wie Reflektion, Refraktion o.Ä. aus der Bewertung, was die Vergleichbarkeit vereinfacht und die Komplexität verringert.   
 
-Die Qualität einer BVH wird rein durch die Traversal-Time definiert. Andere Aspekte wie zum Beispiel Bildqualität durch Verwendung verschiedener Shader sind nicht Teil der Untersuchung.
+Die Qualität einer BVH wird rein durch die Traversal-Time definiert. Andere Aspekte wie zum Beispiel Bildqualität durch Verwendung verschiedener Nachbearbeitungen sind nicht Teil der Untersuchung.
 
 Die Besonderheit dieser Arbeit ist, dass Wide BVH komplett außerhalb des Kontext der Parallelisierbarkeit analysiert werden und alle Berechnungen seriell auf der CPU ausgeführt werden. Es wird explizit die die gesamte serielle Zeit der Algorithmen untersucht, um Veränderungen durch Struktur der BVHs zu ermitteln. 
 
@@ -215,7 +215,7 @@ Die Kollision mit Rays ist durch die \emph{SLAB-Methode} sehr performant~\cite{1
 Eine BVH ist im Kern eine Baumstruktur, die eine sinnvolle Partitionierung der Primitives in der Szene erwirkt. Um einen inneren Knoten zu definieren benötigt man eine AABB, Referenzen zu den eingeschlossenen Primitives und Referenzen zu ihren Child-Nodes. Die AABBs von Child-Nodes befinden sich immer innerhalb der grenzen der AABB ihres Parent-Nodes. Es ist allerdings möglich, dass die AABBS der Child-Nodes sich überschneiden. Die Wurzel ist gleich definiert. Die Blätter der Datenstruktur sind konzeptionell Nodes, deren Menge an Primitives kleiner gleich dem festgelegten Verzweigungsgrad sind. 
 Qualitätsmerkmale einer BVH sind in etwa wenig Überschneidungen von AABBs, AABBs mit möglichst kleinen Flächeninhalten und möglichst wenig Kollisionsüberprüfungen mit Primitives~\cite{10.1145/2492045.2492056}. 
 
-Dabei hängt die Qualität einer BVH von der verwendeten Konstruktionsmethode ab, welche wiederum variierende Komplexität haben. Häufig existiert eine Abwägung zwischen Construction und Traversal Time. 
+Dabei hängt die Qualität einer BVH von der verwendeten Konstruktionsmethode ab, welche wiederum variierende Komplexität haben. Häufig existiert eine Abwägung zwischen Construction und Traversal-Time. 
 
 \subsection{Wide Bounding Volume Hierarchy}
 
